--- a/pages/_style.scss
+++ b/pages/_style.scss
@@ -9,11 +9,22 @@
   font-family: CerebreBold;
   src: url('/CerebreBold.ttf');
 }
+
+
+$white-color: #EFF1F3;
+$yellow-color: #ffb837;
+$blue-color: #52528C;
+$green-color: #0B7A75;
+$red-color: #bd1e1e;
+$black-color: rgb(27, 27, 27);
+
+
 html {
 	scroll-behavior: smooth;
 }
 body, text {
   font-family: Cerebre;
+  background-color: $white-color;
 }
 
 .top-5p {
@@ -21,34 +32,34 @@ body, text {
 }
 
 .bg-yellow {
-  background-color: #ffb837;
+  background-color: $yellow-color;
 }
 
 .bg-gray {
-  background-color: rgb(27, 27, 27);
+  background-color: $black-color;
 }
 
 #landing {
   height: 100vh;
-  background-color: rgb(27, 27, 27);
+  background-color: $black-color;
 }
 
 #reads {
   height: 900vh;
-  // background-color: #ffb837;
+  // background-color: $yellow-color;
 }
 
 #writings {
   height: 500vh;
-  background-color: #00B388;
+  background-color: $green-color;
 }
 
 #photography {
-  background-color: #1599C2;
+  background-color: $blue-color;
   height: 1000vh;
 }
 #howdy {
-  background-color: #bd1e1e;
+  background-color: $red-color;
   height: 100vh;
 }
 
@@ -56,7 +67,7 @@ body, text {
   font-family: 'Nanum Pen Script', sans-serif;
 }
 .shp0 { fill: #000000 } 
-.shp1 { fill: #fff }
+.shp1 { fill: $white-color }
 .shp { fill: none;stroke: #000000;stroke-width: 4.4 } 
 .w-80 {
   width: 70%;
@@ -68,13 +79,13 @@ body, text {
   border-bottom-width: 3px;
 }
 ::-moz-selection { /* Code for Firefox */
-  color: #ffb837;
-  background: white;
+  color: $yellow-color;
+  background: $white-color;
 }
 
 ::selection {
-  color: #ffb837;
-  background: white;
+  color: $yellow-color;
+  background: $white-color;
 }
 
 .font-bold {
@@ -86,33 +97,33 @@ body, text {
 }
 
 #big {
-  fill: #fff;
+  fill: $white-color;
 }
 
 
 // Foot buttons animation
-$underlineColor: black;
+$underlineColor: $black-color;
 $underlineHeight: 5%;
 
 .green-color {
 	&::after {
-		background-image: linear-gradient(120deg, #00B388 0%, #00B388 100%);
+		background-image: linear-gradient(120deg, $green-color 0%, $green-color 100%);
 	}
 }
 .blue-color {
 	&::after {
-		background-image: linear-gradient(120deg, #1599C2 0%, #1599C2 100%);
+		background-image: linear-gradient(120deg, $blue-color 0%, $blue-color 100%);
 	}
 }
 .red-color {
 	&::after {
-		background-image: linear-gradient(120deg, #bd1e1e 0%, #bd1e1e 100%);
+		background-image: linear-gradient(120deg, $red-color 0%, $red-color 100%);
 
 	}
 }
 .yellow-color {
 	&::after {
-		background-image: linear-gradient(120deg, #ffb837 0%, #ffb837 100%);
+		background-image: linear-gradient(120deg, $yellow-color 0%, $yellow-color 100%);
 
 	}
 }
@@ -120,7 +131,7 @@ $underlineHeight: 5%;
   position: relative;
   text-decoration: none;
   display: inline-block;
-  color: white;
+  color: $white-color;
   transition: color ease 0.3s;
   
   &::after {
@@ -135,7 +146,7 @@ $underlineHeight: 5%;
   }
   
   &:hover {
-    color: #fff;
+    color: $white-color;
     
     &::after {
       height: 100%;
@@ -144,7 +155,7 @@ $underlineHeight: 5%;
 }
 
 .override {
-  color: #fff;
+  color: $white-color;
 
   &:hover {
     color: #000;
@@ -152,20 +163,20 @@ $underlineHeight: 5%;
 }
 
 .green {
-		background-image: linear-gradient(120deg, #00B388 0%, #00B388 100%);
+		background-image: linear-gradient(120deg, $green-color 0%, $green-color 100%);
 }
 .red {
-		background-image: linear-gradient(120deg, #bd1e1e 0%, #bd1e1e 100%);
+		background-image: linear-gradient(120deg, $red-color 0%, $red-color 100%);
 
 }
 .yellow {
-		background-image: linear-gradient(120deg, #ffb837 0%, #ffb837 100%);
+		background-image: linear-gradient(120deg, $yellow-color 0%, $yellow-color 100%);
 }
 .yellow-ray {
 		background-image: linear-gradient(120deg, rgb(255, 184, 52) 0%, rgb(255, 184, 52) 100%);
 }
 .blue {
-	background-image: linear-gradient(120deg, #1599C2 0%, #1599C2 100%);
+	background-image: linear-gradient(120deg, $blue-color 0%, $blue-color 100%);
 }
 // Heading underline
 .heading-underline {
@@ -235,21 +246,32 @@ input[type="text"]{font: 15px/24px "Lato", Arial, sans-serif; color: #333; width
 
 
 #right_side, #right_page {
-  transform-origin: 52% 79%;
+  transform-origin: 51.6% 84%;
 }
 #left_side, #left_page {
-  transform-origin: 48% 79%;
+  transform-origin: 48% 84%;
 }
 
 .slick-list,.slick-slider,.slick-track{position:relative;display:block}.slick-loading .slick-slide,.slick-loading .slick-track{visibility:hidden}.slick-slider{box-sizing:border-box;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-touch-callout:none;-khtml-user-select:none;-ms-touch-action:pan-y;touch-action:pan-y;-webkit-tap-highlight-color:transparent}.slick-list{overflow:hidden;margin:0;padding:0}.slick-list:focus{outline:0}.slick-list.dragging{cursor:pointer;cursor:hand}.slick-slider .slick-list,.slick-slider .slick-track{-webkit-transform:translate3d(0,0,0);-moz-transform:translate3d(0,0,0);-ms-transform:translate3d(0,0,0);-o-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}.slick-track{top:0;left:0}.slick-track:after,.slick-track:before{display:table;content:''}.slick-track:after{clear:both}.slick-slide{display:none;float:left;height:100%;min-height:1px}[dir=rtl] .slick-slide{float:right}.slick-slide img{display:block}.slick-slide.slick-loading img{display:none}.slick-slide.dragging img{pointer-events:none}.slick-initialized .slick-slide{display:block}.slick-vertical .slick-slide{display:block;height:auto;border:1px solid transparent}.slick-arrow.slick-hidden{display:none}/*# sourceMappingURL=slick.min.css.map */
-.slick-dots,.slick-next,.slick-prev{position:absolute;display:block;padding:0}.slick-dots li button:before,.slick-next:before,.slick-prev:before{font-family:slick;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.slick-next,.slick-prev{font-size:0;line-height:0;top:50%;width:20px;height:20px;-webkit-transform:translate(0,-50%);-ms-transform:translate(0,-50%);transform:translate(0,-50%);cursor:pointer;color:transparent;border:none;outline:0;background:0 0}.slick-next:focus,.slick-next:hover,.slick-prev:focus,.slick-prev:hover{color:transparent;outline:0;background:0 0}.slick-next:focus:before,.slick-next:hover:before,.slick-prev:focus:before,.slick-prev:hover:before{opacity:1}.slick-next.slick-disabled:before,.slick-prev.slick-disabled:before{opacity:.25}.slick-next:before,.slick-prev:before{font-size:20px;line-height:1;opacity:.75;color:#fff}.slick-prev{left:-25px}[dir=rtl] .slick-prev{right:-25px;left:auto}.slick-prev:before{content:'←'}.slick-next:before,[dir=rtl] .slick-prev:before{content:'→'}.slick-next{right:-25px}[dir=rtl] .slick-next{right:auto;left:-25px}[dir=rtl] .slick-next:before{content:'←'}.slick-dotted.slick-slider{margin-bottom:30px}.slick-dots{bottom:-25px;width:100%;margin:0;list-style:none;text-align:center}.slick-dots li{position:relative;display:inline-block;width:20px;height:20px;margin:0 5px;padding:0;cursor:pointer}.slick-dots li button{font-size:0;line-height:0;display:block;width:20px;height:20px;padding:5px;cursor:pointer;color:transparent;border:0;outline:0;background:0 0}.slick-dots li button:focus,.slick-dots li button:hover{outline:0}.slick-dots li button:focus:before,.slick-dots li button:hover:before{opacity:1}.slick-dots li button:before{font-size:6px;line-height:20px;position:absolute;top:0;left:0;width:20px;height:20px;content:'•';text-align:center;opacity:.25;color:#000}.slick-dots li.slick-active button:before{opacity:.75;color:#000}/*# sourceMappingURL=slick-theme.min.css.map */
+.slick-dots,.slick-next,.slick-prev{position:absolute;display:block;padding:0}.slick-dots li button:before,.slick-next:before,.slick-prev:before{font-family:slick;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.slick-next,.slick-prev{font-size:0;line-height:0;top:50%;width:20px;height:20px;-webkit-transform:translate(0,-50%);-ms-transform:translate(0,-50%);transform:translate(0,-50%);cursor:pointer;color:transparent;border:none;outline:0;background:0 0}.slick-next:focus,.slick-next:hover,.slick-prev:focus,.slick-prev:hover{color:transparent;outline:0;background:0 0}.slick-next:focus:before,.slick-next:hover:before,.slick-prev:focus:before,.slick-prev:hover:before{opacity:1}.slick-next.slick-disabled:before,.slick-prev.slick-disabled:before{opacity:.25}.slick-next:before,.slick-prev:before{font-size:20px;line-height:1;opacity:.75;color:$white-color}.slick-prev{left:-25px}[dir=rtl] .slick-prev{right:-25px;left:auto}.slick-prev:before{content:'←'}.slick-next:before,[dir=rtl] .slick-prev:before{content:'→'}.slick-next{right:-25px}[dir=rtl] .slick-next{right:auto;left:-25px}[dir=rtl] .slick-next:before{content:'←'}.slick-dotted.slick-slider{margin-bottom:30px}.slick-dots{bottom:-25px;width:100%;margin:0;list-style:none;text-align:center}.slick-dots li{position:relative;display:inline-block;width:20px;height:20px;margin:0 5px;padding:0;cursor:pointer}.slick-dots li button{font-size:0;line-height:0;display:block;width:20px;height:20px;padding:5px;cursor:pointer;color:transparent;border:0;outline:0;background:0 0}.slick-dots li button:focus,.slick-dots li button:hover{outline:0}.slick-dots li button:focus:before,.slick-dots li button:hover:before{opacity:1}.slick-dots li button:before{font-size:6px;line-height:20px;position:absolute;top:0;left:0;width:20px;height:20px;content:'•';text-align:center;opacity:.25;color:#000}.slick-dots li.slick-active button:before{opacity:.75;color:#000}/*# sourceMappingURL=slick-theme.min.css.map */
 .slick-list,.slick-slider,.slick-track, .slick-track div, .slick-track div div  {
   height: 100%;
 }
 
 .stroke {
-    color: black;
+    color: $black-color;
     -webkit-text-fill-color: rgba(255, 255, 255, 0); /* Will override color (regardless of order) */
     -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-color: $black-color;
+}
+
+#focus_center {
+  fill: $red-color;
+}
+
+#slider {
+  clip-path: circle(15%);
+}
+#focus {
+  opacity: 1;
 }
